--- a/style.css
+++ b/style.css
@@ -35,3 +35,36 @@ html {
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
+
+display: flex; {
+  justify-content:center ;
+    align-items:center;
+
+    margin-left: 1rem;
+    margin-right: 1rem;
+    margin-top: 10rem;
+    margin-bottom: 10rem;
+
+
+}
+    
+.coffee-container{
+  display: flex;
+  background-color:beige;
+  border-radius:1rem
+
+
+
+
+}
+
+.btn
+ {
+  margin-top: 25rem;
+  background-color: green;
+  color: white;
+  padding:0.5rem 1rem;
+  border-radius: 1rem;
+  text-decoration: none;
+ 
+ }
