--- a/style.css
+++ b/style.css
@@ -33,38 +33,73 @@ html {
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-display: flex; {
-  justify-content:center ;
-    align-items:center;
-
-    margin-left: 1rem;
-    margin-right: 1rem;
-    margin-top: 10rem;
-    margin-bottom: 10rem;
-
-
-}
-    
-.coffee-container{
+  font-family: Arial, sans-serif;
+  background-color: #FFDAA6;
   display: flex;
-  background-color:beige;
-  border-radius:1rem
-
-
-
-
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: center;
+  height: 100vh;
+  color: green; /* Sets default text color to green */
 }
 
-.btn
- {
-  margin-top: 25rem;
-  background-color: green;
-  color: white;
-  padding:0.5rem 1rem;
-  border-radius: 1rem;
-  text-decoration: none;
- 
- }
+.cappuccino-card {
+  width: 400px;
+  background-color: #FFF;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  border-radius: 15px;
+  padding-bottom: 20px;
+}
+
+.cappuccino-card img {
+  width: 100%;
+  height: 280px;
+  object-fit: cover;
+}
+
+.card-content {
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
+h2, h3 {
+  margin: 0;
+}
+
+h3 {
+  font-weight: 500;
+    margin-bottom: 7px;
+    color: #555;
+    font-size: 0.9em;
+}
+
+p {
+  font-size: 14px;
+  margin: 10px 0 20px;
+}
+
+.price {
+  font-weight: bold;
+  font-size: 50px;
+  margin-bottom: 15px;
+}
+
+button {
+  padding: 10px 20px;
+  border: none;
+  background-color: #008000;
+  color: #FFF; /* Keep the button text color white for better visibility against the black background */
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  border-radius: 25px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+button:hover {
+  background-color: #444;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+}
